--- a/app/src/main/res/layout/content_add_new_details.xml
+++ b/app/src/main/res/layout/content_add_new_details.xml
@@ -17,6 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Name of Medicine"
+        android:textColor="#000000"
         android:textSize="30dp"
         android:layout_margin="10dp"/>
 
@@ -26,7 +27,7 @@
         android:layout_height="wrap_content"
         android:inputType="text"
         android:hint="Name of the Medicine here"
-        android:background="#F7F7F7"
+        android:background="#DBD9D9"
         android:textSize="30dp"
         android:textStyle="italic"
         android:layout_margin="10dp"
@@ -36,6 +37,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Total Units of Medicine"
+        android:textColor="#000000"
         android:textSize="30dp"
         android:layout_margin="10dp"/>
 
@@ -45,7 +47,7 @@
         android:layout_height="wrap_content"
         android:inputType="number"
         android:hint="Units in number here"
-        android:background="#F7F7F7"
+        android:background="#DBD9D9"
         android:textSize="30dp"
         android:textStyle="italic"
         android:layout_margin="10dp"
@@ -55,6 +57,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Start Date for Medicine"
+        android:textColor="#000000"
         android:textSize="30dp"
         android:layout_margin="10dp"/>
 
@@ -63,7 +66,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Date to start here"
-        android:background="#F7F7F7"
+        android:background="#DBD9D9"
         android:textSize="30dp"
         android:textStyle="italic"
         android:layout_margin="10dp"
@@ -73,6 +76,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Ending Date for Medicine"
+        android:textColor="#000000"
         android:textSize="30dp"
         android:layout_margin="10dp"/>
 
@@ -81,7 +85,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Date to end here"
-        android:background="#F7F7F7"
+        android:background="#DBD9D9"
         android:textSize="30dp"
         android:textStyle="italic"
         android:layout_margin="10dp"
@@ -91,6 +95,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Choose the number of times"
+        android:textColor="#000000"
         android:textSize="30dp"
         android:layout_margin="10dp"/>
 
@@ -98,7 +103,8 @@
         android:id="@+id/meds_times_a_day"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#F7F7F7"
+        android:background="#DBD9D9"
+        android:textColor="#000000"
         android:textSize="30dp"
         android:entries="@array/times_options"
         android:prompt="@string/times_prompt" />
